--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lodash": "^4.17.21",
     "lucide": "^0.221.0",
     "lucide-react": "^0.221.0",
     "next": "13.4.2",
@@ -24,6 +25,8 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-gauge-chart": "^0.4.1",
+    "react-tooltip": "^5.13.1",
     "tailwindcss": "3.3.2"
   }
 }
