--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide": "^0.221.0",
     "lucide-react": "^0.221.0",
     "next": "13.4.2",
+    "next-images": "^1.8.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
