--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tippyjs/react": "^4.2.6",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
@@ -22,11 +24,13 @@
     "lucide-react": "^0.221.0",
     "next": "13.4.2",
     "next-images": "^1.8.5",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-gauge-chart": "^0.4.1",
+    "react-redux": "^8.0.7",
     "react-tooltip": "^5.13.1",
     "tailwindcss": "3.3.2"
   }
